[package]
name = "ui_amiibo_db_editor"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
prc-rs = { version = "1.3", features = ["xml"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
